2004-09-28  Sam Steingold  <sds@gnu.org>

	* loop.lisp (loop): as per 6.1.1.1.1 and 6.1.1.1.2, LOOP is
	extended when it contains ATOMs, not just loop keywords
	Reported by Kalle Olavi Niemitalo <kon@iki.fi>
	* compiler.lisp (simplify): use TAGBODY instead of simple LOOP
	* subtypep.lisp (intervals-union): ditto

2004-09-28  Bruno Haible  <bruno@clisp.org>

	Make (MAKE-SEQUENCE (FIND-CLASS 'LIST) n) work.
	* sequence.d (valid_type1): Recognize also built-in class objects.
	* clos-class3.lisp: Pass <list> to %defclos as well.

2004-09-19  Bruno Haible  <bruno@clisp.org>

	Support for user-defined DEFGENERIC options.
	* clos-genfun3.lisp (make-generic-function): Add caller, whole-form,
	user-defined-args arguments. Perform checking of generic-function
	options.
	(analyze-defgeneric): Accept generic-function options that depend on
	the generic-function class. Remove the generic-function option checking
	from here. Return an additional value user-defined-args.
	(defgeneric): Perform checking of generic-function options at
	execution time.
	(make-generic-function-form): Update.
	* clos-genfun4.lisp (initialize-instance@generic-function): Remove
	&allow-other-keys.

2004-09-19  Bruno Haible  <bruno@clisp.org>

	Support for user-defined DEFCLASS slot options.
	* clos-slotdef1.lisp (initialize-instance-<slot-definition>): Call
	%initialize-instance, to initialize user-defined slots.
	(initialize-instance-<direct-slot-definition>): Accept defclass-form
	argument.
	(convert-direct-slots): Do slot option checking here.
	* clos-slotdef2.lisp (initialize-instance@direct-slot-definition):
	Accept defclass-form argument.
	* clos-slotdef3.lisp (slot-equal-using-class): Don't constrain the
	direct-slot-definition subclass.
	* clos-class3.lisp (defclass): Accept slot options that depend on the
	direct-slot-definition class. Remove the slot option checking from
	here.

2004-09-27  Jörg Höhle  <hoehle@users.sourceforge.net>
